--- a/public/styles.css
+++ b/public/styles.css
@@ -6,3 +6,12 @@ body {
   color: #eee;
   margin: 2em;
 }
+
+a {
+  color: lightblue;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
